# ipc

./: CMakeLists.txt  helper.h  main.cpp  msgQ_Rec.c  msgQ_send.c
